# BiTAT

./: BiTAT.md  BiTAT_BOM.md
camera_ros2/realsense2_camera/: CMakeLists.txt
leader_arm/: J3-50sd.SLDPRT  J4-50sd.SLDPRT  J5-50sd.SLDPRT  Link1.SLDPRT  Link2.SLDPRT  Link3.SLDPRT  Link4.SLDPRT  Link5.SLDPRT  XL,XC-330-50sd.SLDASM  XL,XC-330.SLDASM  base-50sd.SLDPRT  gello-xarm6.SLDASM  基座_改.SLDPRT  底部增高件1_改.SLDPRT  底部增高件2_改.SLDPRT
robot_arm_ros2/: CMakeLists.txt  package.xml
robot_arm_ros2/launch/: bridge.launch.py  gello.launch.py  xarm6.launch.py
robot_arm_ros2/scripts/: gello_node.py  gello_to_xarm6.old.py  gello_to_xarm6.py  gripper_node.py  ros2_example.py  xarm6_node.py
sensor_hardware/: config.txt  mysocket.py  sensor.py  tst_socket_c.py  配置树莓派.md
tactile_sensor_ros2/dotview_driver/: package.xml  setup.cfg  (+1 more)
teleoperation_ros2/: package.xml  setup.cfg  setup.py
teleoperation_ros2/config/: eval_bi_cfg.yaml  eval_cfg.yaml  record_bi_peeling.yaml  record_bi_teleop.yaml  record_bi_toothpaste.yaml  record_cfg.yaml
teleoperation_ros2/launch/: bridge_bi.launch.py  tele_vtrm_bi.launch.py  tele_vtrm_left.launch.py  tele_vtrm_right.launch.py  tele_vtrm_solo.launch.py
teleoperation_ros2/tele_vtrm/: control.py  eval_bi_control.py  eval_bi_infer.py  eval_right.old.py  eval_right_control.py  eval_right_infer.py  record_bi.py  record_right.py  video_utils.py
teleoperation_ros2/tele_vtrm/gello_utils/: dynamixel.py  dynamixel_driver.py  gello_agent.py
teleoperation_ros2/test/: test_motor.py
training/: configuration_diffusion.py  modeling_diffusion.py  train.py
(+44 files in other folders)
